--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -109,10 +109,10 @@
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Introduction</h2>
  <p class="quote-content">In the past few decades, growing adoption of electronic health records (EHRs) systems have made massive clinical narrative data available electronically. Natural language processing (NLP) technologies that can unlock information from narrative text have received great attention in the medical domain. Many clinical NLP methods and systems have been developed and showed promising results in various information extraction tasks. These methods and tools have also been successfully applied to facilitate clinical research, as well as to support healthcare applications. At the same time, the availability and use of health information online has exploded through use of social media, question-answering and community discussion forums, and health-related websites. These present additional challenges and opportunities for further development of new methodologies and healthcare applications.</p>
 
- <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This will be a one-day workshop that consists of invited speakers, podium talks, and poster presentations.</p>
+ <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations.</p>
 
 
- <p class="quote-content">We will invite papers and short abstracts on novel approaches, works in progress, comparative analyses of tools, and original state-of-the-art work in health NLP methods, tools, and applications. Selected papers will be presented as podium talks, and other interesting submissions and abstracts will be showcased as poster presentations.</p>
+ <p class="quote-content">We invite papers and short abstracts on novel approaches, works in progress, comparative analyses of tools, and original state-of-the-art work in health NLP methods, tools, and applications. Selected papers will be presented as podium talks, and other interesting submissions and abstracts will be showcased as poster presentations.</p>
                 </div>
             </div>
         </div>
@@ -123,49 +123,42 @@
             <div class="container">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Audience</h2>
- <p class="quote-content">Target audience includes both health NLP researchers and consumers. Anyone interested in NLP-based approaches, solutions, and applications in clinical, biomedical, and consumer health informatics is welcome. Researchers and students working on health NLP projects and others interested in learning about and sharing NLP knowledge and resources are strongly encouraged to attend. We also welcome students who wish to closely interact with NLP experts. Potential attendees may come from NLP communities in the medical domain (e.g., AMIA NLP Working Group, BioNLP) and computer and information scientists and linguists working on health-related text processing (e.g., with interests in ACL, EMNLP, NAACL, TREC Precision Medicine and Clinical Decision Support tracks, etc.), as well as general health informatics professionals and researchers. The anticipated number of attendees is around 50.</p>
-                </div>
-             </div>
-         </div>
-
-        <!-- Publicity -->
-        <div id="publicity" class="widget widget-speakers">
-            <div class="container">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Publicity</h2>
- <p class="quote-content">To attract attendees, we will advertise the workshop widely, including: (1) sending emails using community mailing lists such as AMIA NLP Working Group mailing list; (2) creating a dedicated web site for the workshop, (3) contacting individuals through personal connections of organizers and committee members, (4) leveraging social media such as LinkedIn and Twitter, and (5) contacting training programs in computer science, information science, and biomedical informatics to attract additional students and trainees.</p>
+ <p class="quote-content">Target audience includes both health NLP researchers and consumers. Anyone interested in NLP-based approaches, solutions, and applications in clinical, biomedical, and consumer health informatics is welcome. Researchers and students working on health NLP projects and others interested in learning about and sharing NLP knowledge and resources are strongly encouraged to attend. We also welcome students who wish to closely interact with NLP experts. Potential attendees may come from NLP communities in the medical domain (e.g., AMIA NLP Working Group, BioNLP) and computer and information scientists and linguists working on health-related text processing (e.g., with interests in ACL, EMNLP, NAACL, TREC Precision Medicine and Clinical Decision Support tracks, etc.), as well as general health informatics professionals and researchers.</p>
                 </div>
              </div>
          </div>
 
 
 
-
-
-        <!-- Workshop Structure -->
-        <div id="structure" class="widget widget-speakers">
+        <!-- dates -->
+        <div id="dates" class="widget widget-speakers">
             <div class="container">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Workshop Structure</h2>
- <p class="quote-content">This will be a one-day workshop (6 hours). We will allocate about 1 hour for an invited keynote presentation, 3 hours of podium talks of accepted papers, 1 hour for poster presentations of accepted abstracts, and 1 hour for round table panel discussion and open Q&amp;A session.</p>
-         </div>
-     </div>
- </div>
+                <div class="widget-header">
+                    <div>
+                        <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
+                        <ul class="quote-content">
+                          <li>Deadline for all submissions: <strong>March 25<sup>th</sup>, 2019</strong></li>
+                          <li>Notification of decisions: <strong>April 15<sup>th</sup>, 2019</strong></li>
+                          <li>Workshop date: <strong>June 10<sup>th</sup>, 2019</strong></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-        <!-- Reviewing  -->
-        <div id="reviewing" class="widget widget-speakers">
+        <!-- Submissions -->
+        <div id="submissions" class="widget widget-speakers">
             <div class="container">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Reviewing</h2>
- <p class="quote-content">We will accept both full paper and poster submissions of original research in health NLP. All submissions will be submitted and handled through EasyChair. A program committee (PC) will be formed consisting of members from the steering committee and other researchers with experience in health-related NLP. All submitted papers will undergo a peer review process conducted by at least 2 reviewers from the PC. All accepted submissions will be presented at the workshop and published in the IEEE ICHI 2019 Proceedings (including being archived in IEEE Xplore Digital Library). We also propose to invite selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal. (We will start negotiating with the journal after proposal acceptance).</p>
-
-         </div>
-     </div>
- </div>
-
-
-
+                <div class="widget-header">
+                    <div>
+                        <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
+                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://www.easychair.org/conferences/?conf=ichi2019" target="_blank">https://www.easychair.org/conferences/?conf=ichi2019</a></span>) using HealthNLP 2019 track. For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a></span>).</p>
+<p class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2019 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -200,51 +193,6 @@
                 </div>
             </div>
         </div>
-        <!-- call for paper-->
-        <div id="callfor" class="widget widget-speakers">
-            <div class="container">
-                <div class="widget-header">
-                    <div>
-                        <h2 class="widget-body" style="margin-left:-15px">Call for Papers</h2>
-                        <ul class="quote-content">
-                            <a href="https://ohnlp.github.io/HealthNLP2019/CallForPapers_HealthNLP2019.docx">Download Here.</a>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- dates -->
-        <div id="dates" class="widget widget-speakers">
-            <div class="container">
-                <div class="widget-header">
-                    <div>
-                        <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
-                        <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong>March 25<sup>th</sup>, 2019</strong></li>
-                          <li>Notification of decisions: <strong>April 15<sup>th</sup>, 2019</strong></li>
-                          <li>Workshop date: <strong>June 10<sup>th</sup>, 2019</strong></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Submissions -->
-        <div id="submissions" class="widget widget-speakers">
-            <div class="container">
-                <div class="widget-header">
-                    <div>
-                        <h2 class="widget-body" style="margin-left:-15px">Submission and Review</h2>
-                        <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://www.easychair.org/conferences/?conf=ichi2019" target="_blank">https://www.easychair.org/conferences/?conf=ichi2019</a></span>) using HealthNLP 2019 track. For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a></span>).</p>
-<p class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2019 Proceedings and IEEE Digital Library. Plans are underway to also invite authors of selected papers to publish an extended version of their work in a special issue of BMC Medical Informatics and Decision Making journal.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
 
     </main>
 
