--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -86,18 +86,7 @@
                 </ol>
             </div>
         </div>
-        <!-- TEXT -->
-        <div id="text" class="widget widget-description">
-            <div class="container">
-                <div class="col-md-8 col-md-push-2">
-                    <h2 class="widget-heading">The second International Workshop on </h2>
-                    <h2 class="widget-heading">Health Natural Language Processing</h2>
-                    <h2 class="widget-heading">(HealthNLP 2019)</h2>
-                    <h3 class="widget-sub-heading">June 10th, 2019, Beijing, China</h3>
-                </div>
-            </div>
-        </div>
- &nbsp; &nbsp; &nbsp; &nbsp;<!-- Introduction -->
+<!-- Introduction -->
  &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="container">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
