--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -86,8 +86,11 @@
                 </ol>
             </div>
         </div>
+         &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
+ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="container">
+ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
 <!-- Introduction -->
- &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<h2 class="widget-body">Introduction</h2>
+ <h2 class="widget-body">Introduction</h2>
  <p class="quote-content">In the past few decades, growing adoption of electronic health records (EHRs) systems have made massive clinical narrative data available electronically. Natural language processing (NLP) technologies that can unlock information from narrative text have received great attention in the medical domain. Many clinical NLP methods and systems have been developed and showed promising results in various information extraction tasks. These methods and tools have also been successfully applied to facilitate clinical research, as well as to support healthcare applications. At the same time, the availability and use of health information online has exploded through use of social media, question-answering and community discussion forums, and health-related websites. These present additional challenges and opportunities for further development of new methodologies and healthcare applications.</p>
 
  <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations.</p>
