--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -155,15 +155,15 @@
                     <ul class="quote-content">
                         
                         <li>Hua Xu, PhD (contact), Professor, School of Biomedical Informatics, The University of Texas Health Science Center at Houston, Houston, TX, US. <a class="contact-a" href="mailto:hua.xu@uth.tmc.edu">email</a></li>
-                        <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
-                        <li>Yanshan Wang, PhD, Biomedical Informatics in the Mayo Clinic College of Medicine, Rochester, Minnesota <a class="contact-a" href="mailto:Wang.Yanshan@mayo.edu">email</a>                        </li>
+                        <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
+                        <li>Yanshan Wang, PhD, Research Associate, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Wang.Yanshan@mayo.edu">email</a>                        </li>
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
                         
                         <li>Wendy Chapman, PhD, Professor and Chair, Department of Biomedical Informatics, University of Utah, Salt Lake City, US. <a class="contact-a" href="mailto:wendy.chapman@utah.edu">email </a> </li> 
                         <li>Dina Demner Fushman, MD, PhD, Scientist, Lister Hill Center, National Library of Medicine, US. <a class="contact-a" href="mailto:ddemner@mail.nih.gov">email </a> </li> 
-                        <li>Hongfang Liu, Professor, Biomedical Informatics in the Mayo Clinic College of Medicine, Rochester, Minnesota <a class="contact-a" href="mailto:Liu.Hongfang@mayo.edu">email</a>                        </li>
+                        <li>Hongfang Liu, Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Liu.Hongfang@mayo.edu">email</a>                        </li>
                         <li>Stephane Meystre, MD, PhD, Chair and Founding Director, Translational Biomedical Informatics Center, Associate Professor, Psychiatry Department and Biomedical Informatics Center, Medical University of South Carolina, US. <a class="contact-a" href="mailto:meystre@musc.edu">email </a>  </li> 
                         <li>Guergana Savova, PhD, Associate Professor, Harvard Medical School and Children’s Hospital Boston, Boston, MA, US. <a class="contact-a" href="mailto:Guergana.Savova@childrens.harvard.edu">email </a>  </li> 
                         <li>Buzhou Tang, PhD, Associate Professor, Department of Computer Science, Harbin Institute of Technology, Shenzhen, China. <a class="contact-a" href="mailto:tangbuzhou@gmail.com">email </a>  </li> 
