--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -10,8 +10,8 @@
     <title>Health NLP 2019</title>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="NLP WG Pre-symposium 2017">
-    <meta property="og:site_name" content="NLP WG Pre-symposium">
+    <meta property="og:title" content="HealthNLP 2019">
+    <meta property="og:site_name" content="The second International Workshop on Health Natural Language Processing">
     <script async="" src="./Health NLP 2019_files/analytics.js"></script>
     <script src="./Health NLP 2019_files/wp-emoji-release.min.js" type="text/javascript"></script>
     <style type="text/css">
