--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -123,7 +123,7 @@
                         <ul class="quote-content">
                           <li>Deadline for all submissions: <strong>March 25<sup>th</sup>, 2019</strong></li>
                           <li>Notification of decisions: <strong>April 15<sup>th</sup>, 2019</strong></li>
-                          <li>Deadline for camera-ready papers: <strong>May 3<sup>th</sup>, 2019</strong></li>
+                          <li>Deadline for camera-ready papers: <strong>May 3<sup>rd</sup>, 2019</strong></li>
                           <li>Workshop date: <strong>June 10<sup>th</sup>, 2019</strong></li>
                         </ul>
                     </div>
