--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -122,8 +122,8 @@
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
                           <li>Deadline for all submissions: <strong><strike>March 25<sup>th</sup>, 2019</strike><font color="red"> Extended to March 28<sup>th</sup>, 2019</font></strong></li>
-                          <li>Notification of decisions: <strong>April 15<sup>th</sup>, 2019</strong></li>
-                          <li>Deadline for camera-ready papers: <strong>May 3<sup>rd</sup>, 2019</strong></li>
+                          <li>Notification of decisions: <strong><strike>April 15<sup>th</sup>, 2019</strike></strong></li>
+                          <li>Deadline for camera-ready papers: <strong><strike>May 3<sup>rd</sup>, 2019</strike></strong></li>
                           <li>Workshop date: <strong>June 10<sup>th</sup>, 2019</strong></li>
                         </ul>
                     </div>
