--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -131,59 +131,59 @@
     <th class="tg-0lax">Speaker</th>
   </tr>
   <tr>
-    <td class="tg-0lax">2:00-2:10pm</td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">2:00 - 2:10pm</td>
+    <td class="tg-0lax">Welcome to HealthNLP</td>
+    <td class="tg-0lax">Hua Xu, The University of Texas Health Science Center at Houston</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">2:10 - 2:30pm</td>
+    <td class="tg-0lax">Information Extraction for Populating Lung Cancer Clinical Research Data</td>
+    <td class="tg-0lax">Hongfang Liu, Mayo Clinic</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">2:30 - 2:50pm</td>
+    <td class="tg-0lax">RCorp：an Resource for Chemical Disease Semantic Extraction in Chinese</td>
+    <td class="tg-0lax">Jiao Li, Institute of Medical Information, Chinese Academy of Medical Sciences</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">2:50 - 3:10pm</td>
+    <td class="tg-0lax">A Study of Deep Learning Methods for De-identification of Clinical Notes at Cross Institute Settings</td>
+    <td class="tg-0lax">Jiang Bian, University of Florida</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">3:10 - 3:30pm</td>
+    <td class="tg-0lax">TestIME: Testing Chinese Input Method Engines in the Electronic Medical Record Entry Task</td>
+    <td class="tg-0lax">Feihong Yang, Institute of Medical Information and Library, Chinese Academy of Medical Sciences</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">3:30 - 4:00pm</td>
+    <td class="tg-0lax">Coffee Break</td>
     <td class="tg-0lax"></td>
   </tr>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">4:00 - 4:20pm</td>
+    <td class="tg-0lax">Applying a Deep Learning-Based Sequence Labeling Approach to Detect Attributes of Medical Concepts in Clinical Text</td>
+    <td class="tg-0lax">Hua Xu, The University of Texas Health Science Center at Houston</td>
   </tr>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">4:20 - 4:40pm</td>
+    <td class="tg-0lax">A Hybrid Semantic Relatedness Algorithm by Entity Co-Occurrence and Specialized Word Embeddings</td>
+    <td class="tg-0lax">Go Eun Heo, Yonsei University</td>
   </tr>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">4:40 - 5:00pm</td>
+    <td class="tg-0lax">Using the WHO database of spontaneous reports to build joint vector representations of drugs and adverse drug reactions, a promising avenue for pharmacovigilance</td>
+    <td class="tg-0lax">Lucie M. Gattepaille, Uppsala Monitoring Centre Uppsala, Sweden</td>
   </tr>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">5:00 - 5:20pm</td>
+    <td class="tg-0lax">Combined Attention Mechanism for Named Entity Recognition in Chinese Electronic Medical Records</td>
+    <td class="tg-0lax">Li Hou, Institute of Medical Information, Chinese Academy of Medical Science</td>
   </tr>
   <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-  </tr>
-  <tr>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-0lax">5:20 - 5:40pm</td>
+    <td class="tg-0lax">Improving Rare Disease Classification Using Imperfect Knowledge Graph</td>
+    <td class="tg-0lax">Qiaozhu Mei, University of Michigan</td>
   </tr>
 </table>
                     </div>
