--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -119,18 +119,18 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Agenda</h2>
 <style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
+.tg  {border-collapse:collapse;border-spacing:0;border-color:#bbb;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-sc7r{font-weight:bold;font-family:"Arial Black", Gadget, sans-serif !important;;background-color:#9698ed;color:#333333;text-align:left;vertical-align:top}
-.tg .tg-3dm3{background-color:#9698ed;color:#333333;text-align:left;vertical-align:top}
-.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-sc7r{font-weight:bold;font-family:"Arial Black", Gadget, sans-serif !important;;background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
+.tg .tg-3dm3{background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
+.tg .tg-0lax{text-align:center;vertical-align:top}
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-0lax">Time</th>
-    <th class="tg-0lax">Title</th>
-    <th class="tg-0lax">Speaker</th>
+    <th class="tg-sc7r">Time</th>
+    <th class="tg-sc7r">Title</th>
+    <th class="tg-sc7r">Speaker</th>
   </tr>
   <tr>
     <td class="tg-0lax">2:00 - 2:10pm</td>
@@ -158,9 +158,8 @@
     <td class="tg-0lax">Feihong Yang, Institute of Medical Information and Library, Chinese Academy of Medical Sciences</td>
   </tr>
   <tr>
-    <td class="tg-0lax">3:30 - 4:00pm</td>
-    <td class="tg-0lax">Coffee Break</td>
-    <td class="tg-0lax"></td>
+    <td class="tg-3dm3">3:30 - 4:00pm</td>
+    <td class="tg-3dm3" colspan="2">Coffee Break</td>
   </tr>
   <tr>
     <td class="tg-0lax">4:00 - 4:20pm</td>
