--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -122,9 +122,9 @@
 .tg  {border-collapse:collapse;border-spacing:0;border-color:#bbb;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg .tg-sc7r{font-weight:bold;font-family:"Arial Black", Gadget, sans-serif !important;;background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
+.tg .tg-sc7r{font-weight:bold;font-family:"Arial Black", Gadget, sans-serif !important;;background-color:#c0c0c0;color:#333333;text-align:center;vertical-align:top}
 .tg .tg-3dm3{background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
-.tg .tg-0lax{text-align:center;vertical-align:top}
+.tg .tg-0lax{background-color:#e0ffeb;text-align:center;vertical-align:top}
 </style>
 <table class="tg">
   <tr>
@@ -133,9 +133,9 @@
     <th class="tg-sc7r">Speaker</th>
   </tr>
   <tr>
-    <td class="tg-0lax">2:00 - 2:10pm</td>
-    <td class="tg-0lax">Welcome to HealthNLP</td>
-    <td class="tg-0lax">Hua Xu, The University of Texas Health Science Center at Houston</td>
+    <td class="tg-3dm3">2:00 - 2:10pm</td>
+    <td class="tg-3dm3">Welcome to HealthNLP</td>
+    <td class="tg-3dm3">Hua Xu, The University of Texas Health Science Center at Houston</td>
   </tr>
   <tr>
     <td class="tg-0lax">2:10 - 2:30pm</td>
