--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -126,11 +126,11 @@
 .tg .tg-3dm3{background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
 .tg .tg-0lax{background-color:#e0ffeb;text-align:center;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: auto; width: 100%">
+<table class="tg" style="undefined;table-layout: auto; width: 700px">
 <colgroup>
-<col style="width: 10%">
-<col style="width: 50%">
-<col style="width: 40%">
+<col style="width: 150px">
+<col style="width: 300px">
+<col style="width: 250px">
 </colgroup>
   <tr>
     <th class="tg-sc7r">Time</th>
