--- a/healthnlp2019.html
+++ b/healthnlp2019.html
@@ -126,12 +126,7 @@
 .tg .tg-3dm3{background-color:#9698ed;color:#333333;text-align:center;vertical-align:top}
 .tg .tg-0lax{background-color:#e0ffeb;text-align:center;vertical-align:top}
 </style>
-<table class="tg" style="undefined;table-layout: auto; width: 600px">
-<colgroup>
-<col style="width: 100px">
-<col style="width: 300px">
-<col style="width: 200px">
-</colgroup>
+<table class="tg">
   <tr>
     <th class="tg-sc7r">Time</th>
     <th class="tg-sc7r">Title</th>
