--- a/healthnlp2020.html
+++ b/healthnlp2020.html
@@ -15,13 +15,13 @@
     <script async="" src="./Health NLP 2020_files/analytics.js"></script>
     <script src="./Health NLP 2020_files/wp-emoji-release.min.js" type="text/javascript"></script>
     <style type="text/css">
-    .contact-a, .contact-a:hover{
-        margin-top:22px;
-        margin-bottom:11px;
-        font-size: 21px;
-        text-decoration: none;
-        color: rgba(83, 192, 247, 0.91);
-    }
+      .contact-a, .contact-a:hover{
+      margin-top:22px;
+      margin-bottom:11px;
+      font-size: 21px;
+      text-decoration: none;
+      color: rgba(83, 192, 247, 0.91);
+      }
 
     </style>
     <link href="./Health NLP 2020_files/css" rel="stylesheet">
@@ -39,41 +39,41 @@
     <script type="text/javascript" src="./Health NLP 2020_files/owl.carousel.min.js"></script>
     <script type="text/javascript" src="./Health NLP 2020_files/external-tracking.min.js"></script>
     <link rel="https://api.w.org/" href="http://conveyux.com/wp-json/">
-</head>
+  </head>
 
-<body class="home blog header-sticky">
+  <body class="home blog header-sticky">
     <header class="nav header sticky">
-        <div class="header-container">
-            <a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020" id="logo" class="header-logo">
-                <img class="header-logo-img" src="./Health NLP 2020_files/healthNLP2020.png" alt="HealthNLP 2020" title="HealthNLP 2020">
-            </a>
-            <nav class="navbar" role="navigation">
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="tyler-navigation">
-                    <div class="menu-current-container">
-                        <ul id="menu-prmiary" class="navbar-menu">
-<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#introduction">Introduction</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#audience">Audience</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#dates">Important dates</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#submissions">Submissions</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#organization">Organizers</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#contact">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
+      <div class="header-container">
+        <a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020" id="logo" class="header-logo">
+          <img class="header-logo-img" src="./Health NLP 2020_files/healthNLP2020.png" alt="HealthNLP 2020" title="HealthNLP 2020">
+        </a>
+        <nav class="navbar" role="navigation">
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="tyler-navigation">
+            <div class="menu-current-container">
+              <ul id="menu-prmiary" class="navbar-menu">
+		<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#">Home</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#introduction">Introduction</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#audience">Audience</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#dates">Important dates</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#submissions">Submissions</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#organization">Organizers</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020#contact">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
     <main id="main">
-        <div class="hero-container">
-            <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
-                <div class="carousel-inner" role="listbox" id="item-img">
-                    <div class="item active">
-                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2020_files/BJ.png" alt="">
-                    </div>
-                    <!-- div class="item">
-                        <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
+      <div class="hero-container">
+        <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
+          <div class="carousel-inner" role="listbox" id="item-img">
+            <div class="item active">
+              <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2020_files/BJ.png" alt="">
+            </div>
+            <!-- div class="item">
+                 <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
                     </div -->
                     <!-- <div class="item"> -->
                     <!-- img src="" -->
@@ -93,7 +93,7 @@
  <h2 class="widget-body">Introduction</h2>
  <p class="quote-content">In the past few decades, growing adoption of electronic health records (EHRs) systems have made massive clinical narrative data available electronically. Natural language processing (NLP) technologies that can unlock information from narrative text have received great attention in the medical domain. Many clinical NLP methods and systems have been developed and showed promising results in various information extraction tasks. These methods and tools have also been successfully applied to facilitate clinical research, as well as to support healthcare applications. At the same time, the availability and use of health information online has exploded through use of social media, question-answering and community discussion forums, and health-related websites. These present additional challenges and opportunities for further development of new methodologies and healthcare applications.</p>
 
- <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on June 10th, 2020, at Beijing, China, in conjunction with the IEEE International Conference on Healthcare Informatics (<span style="color: #0000ff;"><a href="http://www.ieee-ichi.org/index.html" target="_blank">ICHI 2020</a></span>).</p>
+ <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on June 18th, 2020, at Oldenburg, Germany, in conjunction with the IEEE International Conference on Healthcare Informatics (<span style="color: #0000ff;"><a href="http://www.ieee-ichi.org/index.html" target="_blank">ICHI 2020</a></span>).</p>
 
 
  <p class="quote-content">We invite papers and short abstracts on novel approaches, works in progress, comparative analyses of tools, and original state-of-the-art work in health NLP methods, tools, and applications. Selected papers will be presented as podium talks, and other interesting submissions and abstracts will be showcased as poster presentations.</p>
@@ -112,7 +112,7 @@
              </div>
          </div>
 
-        <!-- Agenda -->
+        <!-- Agenda
         <div id="dates" class="widget widget-speakers">
             <div class="container">
                 <div class="widget-header">
@@ -191,7 +191,7 @@
                 </div>
             </div>
         </div>
-
+-->
         <!-- dates -->
         <div id="dates" class="widget widget-speakers">
             <div class="container">
@@ -199,10 +199,10 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong><strike>March 25<sup>th</sup>, 2020<font color="red"> Extended to March 28<sup>th</sup>, 2020</font></strike></strong></li>
-                          <li>Notification of decisions: <strong><strike>April 15<sup>th</sup>, 2020</strike></strong></li>
-                          <li>Deadline for camera-ready papers: <strong><strike>May 3<sup>rd</sup>, 2020</strike></strong></li>
-                          <li>Workshop date: <strong>June 10<sup>th</sup>, 2020</strong></li>
+                          <li>Deadline for all submissions: <strong>April 15<sup>th</sup>, 2020</strong></li>
+                          <li>Notification of decisions: <strong>May 5<sup>th</sup>, 2020</strong></li>
+                          <li>Deadline for camera-ready papers: <strong>May 15<sup>rd</sup>, 2020</strong></li>
+                          <li>Workshop date: <strong>June 18<sup>th</sup>, 2020</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -233,9 +233,8 @@
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Chairs: </span></strong></p>
                     <ul class="quote-content">
                         
-                        <li>Hua Xu, PhD (contact), Professor, School of Biomedical Informatics, The University of Texas Health Science Center at Houston, Houston, TX, US. <a class="contact-a" href="mailto:hua.xu@uth.tmc.edu">email</a></li>
-                        <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
-                        <li>Yanshan Wang, PhD, Research Associate, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Wang.Yanshan@mayo.edu">email</a>                        </li>
+                      <li>Yuan Luo, PhD, Associate Professor, Feinberg School of Medicine, Northwestern University, Chicago, IL, US. <a class="contact-a" href="mailto:yuan.luo@northwestern.edu">email</a></li>
+                        <li>Pierre Zweigenbaum, PhD, Head of LIMSI, French National Centre for Scientific Research, Paris, France, <a class="contact-a" href="mailto:pz@limsi.fr"> email </a> </li> 
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
@@ -246,9 +245,11 @@
                         <li>Stephane Meystre, MD, PhD, Chair and Founding Director, Translational Biomedical Informatics Center, Associate Professor, Psychiatry Department and Biomedical Informatics Center, Medical University of South Carolina, US. <a class="contact-a" href="mailto:meystre@musc.edu">email </a>  </li> 
                         <li>Guergana Savova, PhD, Associate Professor, Harvard Medical School and Children’s Hospital Boston, Boston, MA, US. <a class="contact-a" href="mailto:Guergana.Savova@childrens.harvard.edu">email </a>  </li> 
                         <li>Buzhou Tang, PhD, Associate Professor, Department of Computer Science, Harbin Institute of Technology, Shenzhen, China. <a class="contact-a" href="mailto:tangbuzhou@gmail.com">email </a>  </li> 
+                        <li>Hua Xu, PhD (contact), Professor, School of Biomedical Informatics, The University of Texas Health Science Center at Houston, Houston, TX, US. <a class="contact-a" href="mailto:hua.xu@uth.tmc.edu">email</a></li>
+                        <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
 
                     <li>Karin Verspoor, PhD, Professor, School of Computing and Information Systems and Deputy Director of the Health and Biomedical Informatics Centre, University of Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@unimelb.edu.au">email </a> </li> 
-                        <li>Pierre Zweigenbaum, PhD, Head of LIMSI, French National Centre for Scientific Research, Paris, France, <a class="contact-a" href="mailto:pz@limsi.fr"> email </a> </li> 
+
                     </ul>
 
                 <div align="center"><p class="quote-content">More to be updated...</p><p></p></div>
