--- a/healthnlp2020.html
+++ b/healthnlp2020.html
@@ -66,7 +66,7 @@
       </div>
     </header>
     <main id="main">
-      <div class="hero-container">
+      <!-- div class="hero-container">
         <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
           <div class="carousel-inner" role="listbox" id="item-img">
             <div class="item active">
@@ -85,7 +85,7 @@
                     <!--li data-target="#hero-carousel" data-slide-to="1"></li -->
                 </ol>
             </div>
-        </div>
+        </div -->
          &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="container">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
