--- a/healthnlp2020.html
+++ b/healthnlp2020.html
@@ -232,9 +232,12 @@
                     <h2 class="widget-body">Organizers</h2>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Chairs: </span></strong></p>
                     <ul class="quote-content">
-                        
                       <li>Yuan Luo, PhD, Associate Professor, Feinberg School of Medicine, Northwestern University, Chicago, IL, US. <a class="contact-a" href="mailto:yuan.luo@northwestern.edu">email</a></li>
                         <li>Pierre Zweigenbaum, PhD, Head of LIMSI, French National Centre for Scientific Research, Paris, France, <a class="contact-a" href="mailto:pz@limsi.fr"> email </a> </li> 
+                    </ul>
+		    <p class="quote-content"><strong><span style="text-decoration: underline;">Publication Chair: </span></strong></p>
+                    <ul class="quote-content">
+                      <li>Yanshan Wang, PhD, Assistant Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:wang.yanshan@mayo.edu">email</a></li>
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
@@ -247,9 +250,10 @@
                         <li>Buzhou Tang, PhD, Associate Professor, Department of Computer Science, Harbin Institute of Technology, Shenzhen, China. <a class="contact-a" href="mailto:tangbuzhou@gmail.com">email </a>  </li> 
                         <li>Hua Xu, PhD (contact), Professor, School of Biomedical Informatics, The University of Texas Health Science Center at Houston, Houston, TX, US. <a class="contact-a" href="mailto:hua.xu@uth.tmc.edu">email</a></li>
                         <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
-
-                    <li>Karin Verspoor, PhD, Professor, School of Computing and Information Systems and Deputy Director of the Health and Biomedical Informatics Centre, University of Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@unimelb.edu.au">email </a> </li> 
-
+                        <li>Pierre Zweigenbaum, PhD, Head of LIMSI, French National Centre for Scientific Research, Paris, France, <a class="contact-a" href="mailto:pz@limsi.fr"> email </a> </li> 
+			<li>Yuan Luo, PhD, Associate Professor, Feinberg School of Medicine, Northwestern University, Chicago, IL, US. <a class="contact-a" href="mailto:yuan.luo@northwestern.edu">email</a></li>
+			<li>Karin Verspoor, PhD, Professor, School of Computing and Information Systems and Deputy Director of the Health and Biomedical Informatics Centre, University of Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@unimelb.edu.au">email </a> </li> 
+                      <li>Yanshan Wang, PhD, Assistant Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:wang.yanshan@mayo.edu">email</a></li>
                     </ul>
 
                 <div align="center"><p class="quote-content">More to be updated...</p><p></p></div>
