--- a/healthnlp2020.html
+++ b/healthnlp2020.html
@@ -199,9 +199,9 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong>July 15<sup>th</sup>, 2020</strong></li>
-                          <li>Notification of decisions: <strong>Aug 15<sup>th</sup>, 2020</strong></li>
-                          <li>Deadline for camera-ready papers: <strong>Aug 30<sup>th</sup>, 2020</strong></li>
+                          <li>Deadline for all submissions: <strong>Sept 4<sup>th</sup>, 2020</strong></li>
+                          <li>Notification of decisions: <strong>Oct 2<sup>nd</sup>, 2020</strong></li>
+                          <li>Deadline for camera-ready papers: <strong>Oct 20<sup>th</sup>, 2020</strong></li>
                           <li>Workshop date: <strong>Dec 3<sup>rd</sup>, 2020</strong></li>
                         </ul>
                     </div>
