--- a/healthnlp2020.html
+++ b/healthnlp2020.html
@@ -93,7 +93,7 @@
  <h2 class="widget-body">Introduction</h2>
  <p class="quote-content">In the past few decades, growing adoption of electronic health records (EHRs) systems have made massive clinical narrative data available electronically. Natural language processing (NLP) technologies that can unlock information from narrative text have received great attention in the medical domain. Many clinical NLP methods and systems have been developed and showed promising results in various information extraction tasks. These methods and tools have also been successfully applied to facilitate clinical research, as well as to support healthcare applications. At the same time, the availability and use of health information online has exploded through use of social media, question-answering and community discussion forums, and health-related websites. These present additional challenges and opportunities for further development of new methodologies and healthcare applications.</p>
 
- <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on Dec 3rd, 2020, at Oldenburg, Germany, in conjunction with the IEEE International Conference on Healthcare Informatics (<span style="color: #0000ff;"><a href="http://www.ieee-ichi.org/index.html" target="_blank">ICHI 2020</a></span>). Due to the uncertainty of current pandemics, we are going virtual with the workshop.</p>
+ <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on Nov 30th, 2020, at Oldenburg, Germany, in conjunction with the IEEE International Conference on Healthcare Informatics (<span style="color: #0000ff;"><a href="http://www.ieee-ichi.org/index.html" target="_blank">ICHI 2020</a></span>). Due to the uncertainty of current pandemics, we are going virtual with the workshop.</p>
 
 
  <p class="quote-content">We invite papers and short abstracts on novel approaches, works in progress, comparative analyses of tools, and original state-of-the-art work in health NLP methods, tools, and applications. Selected papers will be presented as podium talks, and other interesting submissions and abstracts will be showcased as poster presentations.</p>
@@ -202,7 +202,7 @@
                           <li>Deadline for all submissions: <strong>Sept 4<sup>th</sup>, 2020</strong></li>
                           <li>Notification of decisions: <strong>Oct 2<sup>nd</sup>, 2020</strong></li>
                           <li>Deadline for camera-ready papers: <strong>Oct 20<sup>th</sup>, 2020</strong></li>
-                          <li>Workshop date: <strong>Dec 3<sup>rd</sup>, 2020</strong></li>
+                          <li>Workshop date: <strong>Nov 30<sup>th</sup>, 2020</strong></li>
                         </ul>
                     </div>
                 </div>
