--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -199,10 +199,10 @@
                     <div>
                         <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
                         <ul class="quote-content">
-                          <li>Deadline for all submissions: <strong>Sept 4<sup>th</sup>, 2021</strong></li>
-                          <li>Notification of decisions: <strong>Oct 2<sup>nd</sup>, 2021</strong></li>
-                          <li>Deadline for camera-ready papers: <strong>Oct 20<sup>th</sup>, 2021</strong></li>
-                          <li>Workshop date: <strong>Nov 30<sup>th</sup>, 2021</strong></li>
+                          <li>Deadline for all submissions: <strong>May 14<sup>th</sup>, 2021</strong></li>
+                          <li>Notification of decisions: <strong>June 11<sup>th</sup>, 2021</strong></li>
+                          <li>Deadline for camera-ready papers: <strong>June 29<sup>th</sup>, 2021</strong></li>
+                          <li>Workshop date: <strong>August 9<sup>th</sup>, 2021</strong></li>
                         </ul>
                     </div>
                 </div>
