--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -45,7 +45,7 @@
     <header class="nav header sticky">
       <div class="header-container">
         <a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021" id="logo" class="header-logo">
-          <img class="header-logo-img" src="./Health NLP 2021_files/logo2021.png" alt="HealthNLP 2021" title="HealthNLP 2021">
+          <img class="header-logo-img" src="./Health NLP 2021_files/HealthNLP2021.png" alt="HealthNLP 2021" title="HealthNLP 2021">
         </a>
         <nav class="navbar" role="navigation">
           <!-- Collect the nav links, forms, and other content for toggling -->
