--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -237,7 +237,7 @@
                     </ul>
 		    <p class="quote-content"><strong><span style="text-decoration: underline;">Publication Chair: </span></strong></p>
                     <ul class="quote-content">
-                      <li>Yanshan Wang, PhD, Assistant Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:wang.yanshan@mayo.edu">email</a></li>
+                      <li>Yifan Peng, PhD, Assistant Professor, Population Health Sciences, Weill Cornell Medical College, NY, US. <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></li>
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
