--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -241,7 +241,8 @@
                     </ul>
                     <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
                     <ul class="quote-content">
-                        <li>Wendy Chapman, PhD, Professor and Director, Centre for Digital Transformation of Health, The University of Melbourne, Australia <a class="contact-a" href="mailto:wendy.chapman@utah.edu">email </a> </li> 
+			    <!--
+                        <li>Wendy Chapman, PhD, Professor and Director, Centre for Digital Transformation of Health, The University of Melbourne, Australia <a class="contact-a" href="mailto:wendy.chapman@unimelb.edu.au">email </a> </li> 
                         <li>Dina Demner Fushman, MD, PhD, Scientist, Lister Hill Center, National Library of Medicine, US. <a class="contact-a" href="mailto:ddemner@mail.nih.gov">email </a> </li> 
                         <li>Hongfang Liu, Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Liu.Hongfang@mayo.edu">email</a>                        </li>
                         <li>Stephane Meystre, MD, PhD, Chair and Founding Director, Translational Biomedical Informatics Center, Associate Professor, Psychiatry Department and Biomedical Informatics Center, Medical University of South Carolina, US. <a class="contact-a" href="mailto:meystre@musc.edu">email </a>  </li> 
@@ -251,7 +252,7 @@
 			<li>Karin Verspoor, PhD, Professor and Director of Health Technologies, Melbourne School of Engineering, The University of Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@unimelb.edu.au">email </a> </li> 
                       <li>Yanshan Wang, PhD, Assistant Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:wang.yanshan@mayo.edu">email</a></li>
                     </ul>
-
+			-->
                 <div align="center"><p class="quote-content">More to be updated...</p><p></p></div>
 
                 </div>
