--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -245,7 +245,7 @@
 			<li>Wendy Chapman, PhD, Professor and Director, Centre for Digital Transformation of Health, The University of Melbourne, Australia <a class="contact-a" href="mailto:wendy.chapman@unimelb.edu.au">email </a> </li> 
 			<li>Buzhou Tang, PhD, Associate Professor, Department of Computer Science, Harbin Institute of Technology, Shenzhen, China. <a class="contact-a" href="mailto:tangbuzhou@gmail.com">email </a>  </li> 
                         <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a class="contact-a" href="mailto:ouzuner@gmu.edu">email </a>  </li> 
-			<li>Karin Verspoor, PhD, Dean, School of Computing Technologies, RMIT University, Melbourne, Australia, Australia <a class="contact-a" href="mailto:karin.verspoor@rmit.edu.au">email </a> </li> 
+			<li>Karin Verspoor, PhD, Dean, School of Computing Technologies, RMIT University, Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@rmit.edu.au">email </a> </li> 
 			    <!--
                         
                         <li>Hongfang Liu, Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Liu.Hongfang@mayo.edu">email</a>                        </li>
