--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -66,11 +66,11 @@
       </div>
     </header>
     <main id="main">
-      <!-- div class="hero-container">
+      < div class="hero-container">
         <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
           <div class="carousel-inner" role="listbox" id="item-img">
             <div class="item active">
-              <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2021_files/BJ.png" alt="">
+              <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2021_files/vbc.png" alt="">
             </div>
             <!-- div class="item">
                  <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
