--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -85,7 +85,7 @@
                     <!--li data-target="#hero-carousel" data-slide-to="1"></li -->
                 </ol>
             </div>
-        </div -->
+        </div>
          &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="container">
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div class="widget-header">
