--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -70,8 +70,8 @@
         <div class="hero-container">
             <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
                 <div class="carousel-inner" role="listbox" id="item-img">
-                    <div class="item active">
-                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2019_files/vbc.png" alt="">
+                    <div class="item">
+                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2019_files/vbc.png" alt>
                     </div>
                     <!-- div class="item">
                         <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
@@ -81,10 +81,10 @@
                     <!-- <img class="carousel-item-img" src="./Forest.jpg"> -->
                     <!-- </div> -->
                 </div>
-                <ol class="carousel-indicators" style="bottom:50px">
+                <!--ol class="carousel-indicators" style="bottom:50px">
                     <li data-target="#hero-carousel" data-slide-to="0" class="active"></li>
                     <!--li data-target="#hero-carousel" data-slide-to="1"></li -->
-                </ol>
+                <!--/ol>
             </div>
         </div>
          &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
