--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -81,10 +81,10 @@
                     <!-- <img class="carousel-item-img" src="./Forest.jpg"> -->
                     <!-- </div> -->
                 </div>
-                <!--ol class="carousel-indicators" style="bottom:50px">
+                <ol class="carousel-indicators" style="bottom:50px">
                     <li data-target="#hero-carousel" data-slide-to="0" class="active"></li>
                     <!--li data-target="#hero-carousel" data-slide-to="1"></li -->
-                <!--/ol>
+                </ol>
             </div>
         </div>
          &nbsp; &nbsp; &nbsp; &nbsp;<div id="introduction" class="widget widget-speakers">
