--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -70,8 +70,8 @@
         <div class="hero-container">
             <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
                 <div class="carousel-inner" role="listbox" id="item-img">
-                    <div class="item">
-                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2019_files/vbc.png" alt>
+                    <div class="item active">
+                        <img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2021_files/vbc.png" alt="">
                     </div>
                     <!-- div class="item">
                         <img class="hero-carousel" style="width: 90%; margin: auto" src="./images/NY2.png" alt>
