--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -71,7 +71,7 @@
 	    <div class="carousel slide" id="hero-carousel" data-ride="carousel" data-interval="6000">
 		<div class="carousel-inner" role="listbox" id="item-img">
 		    <div class="item active">
-			<img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2021_files/vbc.png" alt="">
+			<img class="hero-carousel" style="height: 60%; width: 90%; margin: auto" src="./Health NLP 2021_files/vbc2.png" alt="">
 		    </div>
 		 
 		</div>
