--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -243,7 +243,8 @@
 			<li>Karin Verspoor, PhD, Dean, School of Computing Technologies, RMIT University, Melbourne, Australia <a class="contact-a" href="mailto:karin.verspoor@rmit.edu.au">email </a> </li> 
 			<li>Hongfang Liu, Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Liu.Hongfang@mayo.edu">email</a>                        </li>
                         <li>Stephane Meystre, MD, PhD, Chair and Founding Director, Translational Biomedical Informatics Center, Associate Professor, Psychiatry Department and Biomedical Informatics Center, Medical University of South Carolina, US. <a class="contact-a" href="mailto:meystre@musc.edu">email </a>  </li> 
-                         <!--
+                        <li>Yanshan Wang, Assistant Professor, Department of AI & Informatics, Mayo Clinic, Rochester, MN, US. <a class="contact-a" href="mailto:Wang.yanshan@mayo.edu">email</a>
+			    <!--
 			<li>Guergana Savova, PhD, Associate Professor, Harvard Medical School and Children’s Hospital Boston, Boston, MA, US. <a class="contact-a" href="mailto:Guergana.Savova@childrens.harvard.edu">email </a>  </li> 
                         -->
 		    </ul>    
