--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -58,6 +58,7 @@
 		<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#dates">Important dates</a></li>
 		<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#submissions">Submissions</a></li>
 		<li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#organization">Organizers</a></li>
+		<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#past">Past Workshops</a></li>
 		<li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#contact">Contact Us</a></li>
               </ul>
             </div>
@@ -255,11 +256,11 @@
         </div>
 
 	<!-- past workshops -->
-        <div id="past workshops" class="widget widget-speakers">
+        <div id="past" class="widget widget-speakers">
             <div class="container">
                 <div class="widget-header">
                     <div>
-                        <h2 class="widget-body" style="margin-left:-15px">Important dates</h2>
+                        <h2 class="widget-body" style="margin-left:-15px">Past workshops</h2>
                         <ul class="quote-content">
                           <li><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020" target="_blank">HealthNLP2020</a></li>
 			 <li><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019" target="_blank">HealthNLP2019</a></li>
