--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -197,7 +197,7 @@
                         <ul class="quote-content">
                           <li>Deadline for all submissions: <strong>May 1<sup>st</sup>, 2021</strong></li>
                           <li>Notification of decisions: <strong>May 15<sup>th</sup>, 2021</strong></li>
-                          <li>Deadline for camera-ready papers: <strong>May 21<sup>st</sup>, 2021</strong></li>
+                          <li>Deadline for camera-ready papers: <strong><strike>May 21<sup>st</sup>,</stike>  <font color="red">May 24<sup>st</sup></font>, 2021</strong></li>
                           <li>Workshop date: <strong>August 9<sup>th</sup>, 2021</strong></li>
                         </ul>
                     </div>
