--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -223,7 +223,7 @@
           <p class="quote-content"><strong><span style="text-decoration: underline;">Chairs: </span></strong></p>
           <ul class="contact-list">
             <li>Rui Zhang, PhD, Associate Professor, Institute for Health Informatics & College of Pharmacy, University of Minnesota, Minneapolis, MN, US. <a href="mailto:zhan1386@umn.edu">email</a></li>
-            <li>Hua Xu, PhD, Professor, School of Biomedical Informatics, Univeristy of Texas Health Science Center at Houston, Houston, TX, US. <a" href="mailto:Hua.Xu@uth.tmc.edu">email</a></li>
+            <li>Hua Xu, PhD, Professor, School of Biomedical Informatics, Univeristy of Texas Health Science Center at Houston, Houston, TX, US. <a href="mailto:Hua.Xu@uth.tmc.edu">email</a></li>
           </ul>
           <p class="quote-content"><strong><span style="text-decoration: underline;">Publication Chair: </span></strong></p>
           <ul class="contact-list">
